# Satoshi-Pulse

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  bitcoin_exchange_analyzer.py  docker-compose.yml  pyproject.toml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  api.ts  index.css
dashboard/src/components/: Layout.tsx
dashboard/src/pages/: Dashboard.tsx  MarketData.tsx  OnChain.tsx  Settings.tsx  Signals.tsx
data/: satoshi_pulse.db
src/: __init__.py  __main__.py
src/analysis/: feature_engine.py  signal_generator.py  technical.py
src/api/: main.py  websocket.py
src/api/routes/: dashboard.py  signals.py  status.py
src/collectors/: base.py  defi.py  derivatives.py  fundamentals.py  market_data.py  news.py  on_chain.py  sentiment.py  whale.py
src/config/: settings.py
src/freqtrade_integration/: config.py  signal_bridge.py  strategy.py
src/scheduler/: __init__.py  scheduler.py
src/storage/: database.py  models.py  processing.py  writer.py
tests/: test_core.py
