[project]
name = "satoshi-pulse"
version = "2.0.0"
description = "Full-stack big data crypto analysis platform with signals for Freqtrade"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Satoshi Pulse Team" }
]
keywords = ["crypto", "trading", "bitcoin", "blockchain", "signals", "freqtrade"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "ccxt>=4.3.0",
    "apscheduler>=3.10.0",
    "websockets>=12.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aioredis>=2.0.1",
    "pydantic[email]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "black>=24.2.0",
]

frontend = [
    "@vitejs/plugin-react>=4.2.0",
    "vite>=5.1.0",
    "react>=18.2.0",
    "react-dom>=18.2.0",
    "react-router-dom>=6.22.0",
    "recharts>=2.12.0",
    "zustand>=4.5.0",
    "@tanstack/react-query>=5.22.0",
    "tremor>=3.14.0",
    "typescript>=5.3.0",
    "@types/react>=18.2.0",
    "@types/react-dom>=18.2.0",
]

[project.urls]
Homepage = "https://github.com/satoshi-pulse/satoshi-pulse"
Repository = "https://github.com/satoshi-pulse/satoshi-pulse"
Documentation = "https://satoshi-pulse.readthedocs.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]